* fixed bug where a variable was improperly nested in an if statement
* fixed bug with incorrectly disabling link when no href is present in invoking element
* fixed annoyance (reported at http://plugins.jquery.com/node/1081): default title attributes showing before cluetip when using long interval in hoverIntent.

== 0.9.3 == 

* Fixed "arrows" option so that it now works for all three themes. Changed the way it works, and changed css to work better with it.
* Removed rounded-corners theme's reliance on #cluetip-title for part of the background image. Now, you can hide the title without losing part of the clueTip's background.
* Moved all images for arrows and rounded corners to a separate folder.

== 0.9.2.2 ==

* added support for any selector expression to be used for grabbing local content. The plugin will just take the first element in the set of matched elements for its content.
* release the cursor setting when clueTip is closed.
* if jQuery 1.2.x is being used, local option uses .clone(true) and appends local element to clueTip (after emptying) so that events within that local content don't lose their binding 

== 0.9.2.1 ==

* added .clue-bottom-[cluetipClass] and .clue-top-[cluetipClass] when cluetip is positioned below or above the linked element.
* added "fixed" as a possible value for the "positionBy" option. With this, the clueTip will always appear in the same position relative to the linked element.
* added "topOffset" and "leftOffset" options. See documentation for details.

== 0.9.0 ==

* fixed a couple bugs introduced by the new 'bottomTop' value for 'positionBy' in 0.8.7.
* fixed the stray, content-less clueTip that was being left visible in certain situations.

== 0.8.7 ==

* added 'bottomTop' as an available value for the "positionBy" option.
* added ability to set hoverIntent options through cluetip's hoverIntent options