@@ -1,6 +1,5 @@
 
 /* the next line is an example of how you can override default options globally (currently commented out) ... */
-
  // $.fn.cluetip.defaults.tracking = true;
 
 $(document).ready(function() {
